# KLTN_BlockchainSolana

./: burnToken.js  burnToken2.js  createToken.js  createWallet.js  getAllHistoryToken.js  getTokenAddress.js  getTransactionsByProjectId.js  getWalletInfo.js  package-lock.json  package.json  requestAirdrop.js  sendTransaction.js  solana-keypair.json  tokenBalance.js  token_transfer.js  update.js
myproject/: Anchor.toml
myproject/programs/myproject/src/: lib.rs
token-burn/: Anchor.toml
token-burn/programs/token-burn/: Cargo.toml
token-burn/programs/token-burn/src/: lib.rs
token-burn/tests/: token-burn.ts
transfer-token/: Anchor.toml
transfer-token/programs/transfer-token/: Cargo.toml
transfer-token/programs/transfer-token/src/: lib.rs
transfer-token/tests/: transfer-token.ts
